// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CxCardHeader customize 1`] = `
<div>
  <h3
    class="card-header bazinga"
  >
    Test
  </h3>
</div>
`;

exports[`loads and displays CxCardHeader component 1`] = `
<div>
  <div
    class="card-header"
  >
    Test
  </div>
</div>
`;
